--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body {
   font-family: Arial, sans-serif;
   background: var(--black);
   color: var(--white);
+  padding-top: 80px;
 }
 
 header {
