--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,11 +76,15 @@ header {
 
 /* HERO */
 .hero {
-  height:100vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  text-align:center;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  background:
+    linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)),
+    url("../images/hero.jpg") center/cover no-repeat;
 }
 
 .hero h1 {
