--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,8 +83,8 @@ header {
   text-align: center;
 
   background:
-    linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)),
-    url("assets/images/Hero Banner.png") center/cover no-repeat;
+  linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)),
+  url("../images/Hero Banner.png") center/cover no-repeat;
 }
 
 .hero h1 {
