--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ header {
 
   background:
   linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)),
-  url("../images/Hero Banner.png") center/cover no-repeat;
+  url("../images/Hero Banner1.png") center/cover no-repeat;
 }
 
 .hero h1 {
